--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -65,6 +65,52 @@
   font-weight: 900;
   font-style: italic;
 }
+.gradient {
+  background: linear-gradient(152deg, rgb(60, 29, 168) 0%, rgb(157, 191, 194) 100%);
+}
+
+.green {
+  color: #1ED760 !important;
+}
+
+.bgSpoty {
+  background-color: #1ED760 !important;
+}
+
+.square {
+  width: 35px;
+  height: 35px;
+}
+
+.bgGreen {
+  background-color: #004537 !important;
+}
+
+* {
+  font-family: "Circular";
+}
+
+.display {
+  display: none;
+}
+
+#dropdown {
+  cursor: pointer;
+}
+
+.bgCenterBlack {
+  background: linear-gradient(20deg, rgb(0, 0, 0) 5%, rgba(0, 0, 0, 0) 75%);
+  /* background: linear-gradient(90deg, #000000 0%, #121212 100%); */
+}
+
+a {
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
+a:hover {
+  color: white !important;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
