--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -111,6 +111,16 @@ a:hover {
   color: white !important;
 }
 
+.card1 {
+  width: 80px !important;
+  height: 80px !important;
+  background-color: black;
+}
+
+.bgGray {
+  background-color: #2C2C2C;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
