--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -121,6 +121,18 @@ a:hover {
   background-color: #2C2C2C;
 }
 
+.bgCenterAlbum {
+  background: linear-gradient(180deg, rgb(220, 190, 79) 1%, rgb(18, 18, 18) 100%);
+}
+
+.album-cover-album {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.btn-spotify-album {
+  width: 100px;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
