--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -256,6 +256,10 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .btn-spotify-album{
     width: 100px;
+   
+}
+.icon-spotify-album{
+    font-size: 2.5em
 }
 
 @import "scss/bootstrap.scss";
