--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -258,4 +258,21 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     width: 100px;
 }
 
+
+.hover i {
+    transition-duration: 0.3s;
+    cursor: pointer;
+    &:hover {
+        color: white !important;
+    }
+} 
+
+#play1 {
+    color: white !important;
+}
+
+.activeShuffle {
+    color: #1ED760 !important;
+}
+
 @import "scss/bootstrap.scss";
