--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -133,6 +133,22 @@ a:hover {
   width: 100px;
 }
 
+.hover i {
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
+.hover i:hover {
+  color: white !important;
+}
+
+#play1 {
+  color: white !important;
+}
+
+.activeShuffle {
+  color: #1ED760 !important;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
