--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -122,18 +122,27 @@ a:hover {
 }
 
 .bgCenterAlbum {
-  background: linear-gradient(180deg, rgb(220, 190, 79) 1%, rgb(18, 18, 18) 100%);
+  background: linear-gradient(180deg, rgba(233,233,233,0.8183648459383753) 0%, rgba(18,18,18,1) 100%);
 }
 
 .album-cover-album {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.btn-spotify-album {
-  width: 100px;
+.btn-round{
+  width:50px ;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .icon-spotify-album{
-  font-size: 2.5em
+  font-size: 1.5em
+}
+
+.sfondoDinamico {
+  background-color: #dbbd4e
 }
 
 /*!
