--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -249,17 +249,28 @@ a {
     background-color: #2C2C2C;
 } 
 .bgCenterAlbum {
-    background: linear-gradient(180deg, rgba(220,190,79,1) 1%, rgba(18,18,18,1) 100%);
+    background: linear-gradient(180deg, rgba(233,233,233,0.8183648459383753) 0%, rgba(18,18,18,1) 100%);
 }
 .album-cover-album{
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.btn-spotify-album{
-    width: 100px;
-   
+
+.btn-round{
+    width:50px ;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.sfondoDinamico {
+    background-color: #dbbd4e
 }
+
 .icon-spotify-album{
-    font-size: 2.5em
-}
+    font-size: 1.5em
+  }
+  
+
 
 @import "scss/bootstrap.scss";
