--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -132,9 +132,12 @@ a:hover {
 .btn-round{
   width:50px ;
   height: 50px;
+
+}
+.btn-round button{
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .icon-spotify-album{
