--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -192,6 +192,26 @@ a:hover {
 .volumeControll div i:hover {
   color: white !important;
 }
+#search-container {
+  position: relative;
+  display: inline-block;
+  align-items: center;
+}
+
+#album-search {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  color: white
+}
+
+
+#search-container:hover #album-search {
+  opacity: 1;
+  visibility: visible;
+  background-color: black;
+  color: white
+}
 
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
