--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -317,6 +317,26 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         color: white !important;
     }
 }
+#search-container {
+    position: relative;
+    display: inline-block;
+    align-items: center;
+}
+
+#album-search {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    color: white
+   
+}
+
+#search-container:hover #album-search {
+    opacity: 1;
+    visibility: visible;
+    background-color: black;
+    color: white
+}
 
 
 
