--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -193,6 +193,27 @@ a:hover {
   color: white !important;
 }
 
+.hover2 {
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
+.hover2 :hover {
+  background-color: black !important;
+}
+.hover2 :hover #playAlbum {
+  opacity: 1;
+  transform: translate(0%, -20%);
+}
+
+#playAlbum {
+  opacity: 0;
+  transition-duration: 0.3s;
+}
+#playAlbum:hover {
+  color: #1ED760 !important;
+  background-color: transparent !important;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
