--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -219,7 +219,7 @@ $utilities: map-merge($utilities,
 }
 
 .display {
-    display: none;
+    display: none !important;
 }
 
 #dropdown {
@@ -240,11 +240,6 @@ a {
     }
 }
 
-.card1 {
-    width: 80px !important;
-    height: 80px !important;
-    background-color: black;
-}
 
 .bgGray {
     background-color: #2C2C2C;
@@ -326,6 +321,7 @@ a {
         color: white !important;
     }
 }
+
 #search-container {
     position: relative;
     display: inline-block;
@@ -337,7 +333,6 @@ a {
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
     color: white
-   
 }
 
 #search-container:hover #album-search {
@@ -351,7 +346,7 @@ a {
     cursor: pointer;
     transition-duration: 0.2s;
     & :hover {
-        background-color: black !important;
+        background-color: rgba(0, 0, 0, 0.3) !important;
         & #playAlbum {
             opacity: 1;
             transform: translate(0%, -20%);
@@ -363,10 +358,100 @@ a {
 #playAlbum {
     opacity: 0;
     transition-duration: 0.3s;
+
     &:hover {
         color: #1ED760 !important;
         background-color: transparent !important;
     }
+}
+
+
+.card1 {
+    width: 80px !important;
+    height: 80px !important;
+    overflow: hidden;
+}
+
+.img-container {
+    width: 80px;
+    /* height: 80px;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-container img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+}
+
+.navbar-mobile {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Background trasparente */
+    z-index: 9999;
+    /* Z-index maggiore del resto */
+}
+
+.navbar-mobile {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Background trasparente */
+    z-index: 9999;
+    /* Z-index maggiore del resto */
+}
+
+.navbar-mobile .nav-link {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.navbar-mobile .nav-link:hover {
+    color: #1ED760;
+    /* Colore hover per le icone */
+}
+
+/*MOBILE*/
+@media (max-width: 576px) {
+    .bgGray {
+        background-color: transparent !important;
+        /* Usa !important per forzare la sovrascrittura */
+    }
+
+    .icon-container {
+        display: flex;
+        gap: 25px;
+        /* Spazio tra le icone */
+    }
+
+    .icon-container i {
+        font-size: 1.5em;
+        /* Dimensione delle icone */
+        color: #fff;
+        /* Colore delle icone */
+    }
+
+
+    .goodnight-mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex: 1;
+    }
+
+    #albumSection .col {
+        flex: 0 0 50%;
+        /* Ridimensiona gli album al 50% della larghezza del contenitore */
+        max-width: 50%;
+    }
+
 }
 
 @import "scss/bootstrap.scss";
