--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -99,7 +99,12 @@
 }
 
 .bgCenterBlack {
-  background: linear-gradient(20deg, rgb(0, 0, 0) 5%, rgba(0, 0, 0, 0) 75%);
+  background: linear-gradient(20deg, #000000 5%, rgba(0, 0, 0, 0) 75%);
+  /* background: linear-gradient(90deg, #000000 0%, #121212 100%); */
+}
+
+.bgCenterDark {
+  background: linear-gradient(5deg, #212529 25%, rgba(0, 0, 0, 0.5) 75%);
   /* background: linear-gradient(90deg, #000000 0%, #121212 100%); */
 }
 
@@ -152,12 +157,11 @@ a:hover {
   color: #1ED760 !important;
 }
 
-.bg-img-dinamica {
-  background-image: url("../img/main/image-18.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
+/* .bg-img-dinamica {
+    background-image: url('../img/main/image-18.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
 .icon-container {
   position: relative;
   display: inline-block;
