--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -328,6 +328,10 @@ a:hover {
     width: 95% !important;
   }
 }
+.cursorPointer {
+  cursor: pointer;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
