--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -481,5 +481,12 @@ a {
     cursor: pointer;
 }
 
+.textGreen {
+    color: #1ED760 !important;
+}
+
+main {
+    overflow-x: auto;
+}
 
 @import "scss/bootstrap.scss";
