--- a/assets/custom-bootstrap/custom-style.css
+++ b/assets/custom-bootstrap/custom-style.css
@@ -332,6 +332,14 @@ a:hover {
   cursor: pointer;
 }
 
+.textGreen {
+  color: #1ED760 !important;
+}
+
+main {
+  overflow-x: auto;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
