--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -427,10 +427,6 @@ a {
     bottom: 0 !important;
 }
 
-main{
-    overflow-x: hidden;
-}
-
 /*MOBILE*/
 @media (max-width: 576px) {
 
@@ -468,13 +464,8 @@ main{
 
 }
 
-
 @media  (max-width: 767.98px) {
-    .icon-container {
-        display: flex;
-        gap: 25px;
-        /* Spazio tra le icone */
-    }
+
     #sectionControl{
         bottom: 51px !important;
     }
@@ -484,12 +475,18 @@ main{
         border: none !important;
         width: 95% !important;
     }
-   
 }
 
 .cursorPointer {
     cursor: pointer;
 }
 
+.textGreen {
+    color: #1ED760 !important;
+}
+
+main {
+    overflow-x: auto;
+}
 
 @import "scss/bootstrap.scss";
