--- a/assets/custom-bootstrap/custom-style.scss
+++ b/assets/custom-bootstrap/custom-style.scss
@@ -428,55 +428,66 @@ a {
 }
 
 /*MOBILE*/
-@media (max-width: 576px) {
-
+@media (min-width:300px) and (max-width: 991.2px) {
     .bgGray {
-        background-color: transparent !important;
-        /* Usa !important per forzare la sovrascrittura */
+      background-color: transparent !important;
+      /* Usa !important per forzare la sovrascrittura */
     }
-
     .icon-container {
+      display: flex;
+      gap: 30px;
+    }
+    .icon-container i {
+      font-size: 1.5em;
+      /* Dimensione delle icone */
+      color: #fff;
+      /* Colore delle icone */
+    }
+    .goodnight-mobile {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex: 1;
+    }
+    #albumSection .col {
+      flex: 0 0 50%;
+      /* Ridimensiona gli album al 50% della larghezza del contenitore */
+      max-width: 50%;
+    }
+  }
+  @media (max-width: 767.98px) {
+    #sectionControl {
+      bottom: 51px !important;
+    }
+    #containerPlayer {
+      border-radius: 5px !important;
+      border: none !important;
+      width: 95% !important;
+    }
+  }
+  
+  @media (min-width: 767.9px) and (max-width:991.2px){
+    #sectionControl {
+        bottom: 2.4% !important;
+      }
+      
+      .icon-container {
         display: flex;
         gap: 25px;
         /* Spazio tra le icone */
-    }
-
-    .icon-container i {
+      }
+      .icon-container {
+        display: flex;
+        gap: 25px;
+        /* Spazio tra le icone */
+      }
+      .icon-container i {
         font-size: 1.5em;
         /* Dimensione delle icone */
         color: #fff;
         /* Colore delle icone */
+      }
     }
-
-
-    .goodnight-mobile {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex: 1;
-    }
-
-    #albumSection .col {
-        flex: 0 0 50%;
-        /* Ridimensiona gli album al 50% della larghezza del contenitore */
-        max-width: 50%;
-    }
-
-}
-
-@media  (max-width: 767.98px) {
-
-    #sectionControl{
-        bottom: 51px !important;
-    }
-
-    #containerPlayer {
-        border-radius: 5px !important;
-        border: none !important;
-        width: 95% !important;
-    }
-}
-
 .cursorPointer {
     cursor: pointer;
 }
